package main.java.com.agentpay.model.enums;

public enum TypePaiement {
    SALAIRE,
    PRIME,
    BONUS,
    INDEMNITE
}
