package model;

public class PaiementBonus {
    private boolean conditionvalide;
}
