package model.enums;

public enum TypeAgent {
    OUVRIER,
    RESPONSABLE,
    DIRECTEUR,
    STAGIAIRE
}
